<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.GridLayout
            app:orientation="vertical"
            android:id="@+id/mainGridView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            app:alignmentMode="alignMargins"
            app:columnCount="2"
            app:columnOrderPreserved="false"
            app:rowCount="4">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/colorAdmissionBackground"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                app:layout_row="0"
                app:layout_column="0"
                app:layout_gravity="fill">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dashboard_admissions"
                        android:textColor="@color/colorWhite"
                        android:textAlignment="center"/>

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="end"
                        app:srcCompat="@drawable/ic_admission"
                       />

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/colorStudentFinanceBackground"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                app:layout_row="0"
                app:layout_column="1"
                app:layout_gravity="fill">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/dashboard_student_finance"
                        android:textColor="@color/colorWhite" />

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="end"
                        app:srcCompat="@drawable/ic_finance" />
                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/colorSemesterRegistrationBackground"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                app:layout_row="1"
                app:layout_column="0"
                app:layout_gravity="fill">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/dashboard_semester_registration"
                        android:textColor="@color/colorWhite" />

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="end"
                        app:srcCompat="@drawable/ic_semister_registration" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/colorHostelBookingBackground"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                app:layout_row="1"
                app:layout_column="1"
                app:layout_gravity="fill">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/dashboard_hostel_booking"
                        android:textColor="@color/colorWhite" />

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="end"
                        app:srcCompat="@drawable/ic_hostel_booking" />
                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/colorUnitRegistrationBackground"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                app:layout_row="2"
                app:layout_column="0"
                app:layout_gravity="fill">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/dashboard_unit_registration"
                        android:textColor="@color/colorWhite" />

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="end"
                        app:srcCompat="@drawable/ic_unit_registration" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/colorTimeTableBackground"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                app:layout_row="2"
                app:layout_column="1"
                app:layout_gravity="fill">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/dashboard_timetable"
                        android:textColor="@color/colorWhite" />

                    <ImageView
                        android:layout_weight="1"
                        android:layout_gravity="end"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:srcCompat="@drawable/ic_time_table" />
                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/colorExamBackground"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                app:layout_row="3"
                app:layout_column="0"
                app:layout_gravity="fill">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/dashboard_exam"
                        android:textColor="@color/colorWhite" />

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="end"
                        app:srcCompat="@drawable/ic_exam" />
                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/colorMyProfileBackground"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                app:layout_row="3"
                app:layout_column="1"
                app:layout_gravity="fill">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/dashboard_my_profile"
                        android:textColor="@color/colorWhite" />

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="end"
                        app:srcCompat="@drawable/ic_my_profile" />

                </LinearLayout>


            </android.support.v7.widget.CardView>

        </android.support.v7.widget.GridLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="2">

            <android.support.v7.widget.CardView
                android:id="@+id/feeStatusColor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                app:cardBackgroundColor="@android:color/holo_red_light"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">

                    <LinearLayout
                        android:id="@+id/feeStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="20dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_money" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/dashboard_fee_status"
                            android:textColor="@color/colorWhite" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/feeStatusLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/feeStatus"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/dashboard_fee_description"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/dashboard_fee_amount"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/feeStatusLabel"
                        android:background="#f9f9f9"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/dashboard_fee_status" />

                        <TextView
                            android:id="@+id/feeBalance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            tools:text="10,000" />
                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>